--- a/public/index.html
+++ b/public/index.html
@@ -9,9 +9,10 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
+    <link rel="stylesheet" href="./mainStyles.css" />
     <title>Video Player</title>
   </head>
-  <body style="margin : 0">
+  <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
